<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="alarm">Alarm</string>
    <string name="app_name">Material Clock</string>
    <string name="timer">timer</string>
    <string name="stopwatch">stopwatch</string>
    <string name="add_label">Add Label</string>
    <string name="delete_label">Delete</string>
    <string name="vibrate_label">Vibrate</string>
    <string name="not_scheduled_label">Not Scheduled</string>
    <string name="schedule_alarm_label">Schedule alarm</string>
    <string name="ok_label">OK</string>
    <string name="cancel">Cancel</string>
    <string name="label">Label</string>
    <string name="select_time">Select Time</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="alarm_date_picker_title">Select the date of the %1s alarm</string>
    <string name="scheduled_for">Scheduled For %1s</string>
    <string name="upcoming_alarm">Upcoming Alarm</string>
    <string name="alarm_snoozed">Snoozed alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="stop">Stop</string>
    <string name="snooze">Snooze</string>
    <string name="snoozed_until">Snoozed Until %1s</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="device_sounds">Device Sounds</string>
    <string name="no_alarm">No Alarms</string>
    <string name="notification_permission_title">Permission to show notifications</string>
    <string name="notification_permission_text">To display a popup when the alarm rings, permission to show notifications is required.</string>
    <string name="notification_permission_denied_message">Notification permission denied. Some functionalities of the app may not work properly</string>
    <string name="backspace">backspace</string>
    <string name="reset">Reset</string>
    <string name="time_up">Time\'s up</string>
    <string name="pause">Pause</string>
    <string name="timer_add_time">Add 1 min</string>
    <string name="timer_paused">Timer Paused</string>
    <string name="resume">Resume</string>
    <string name="timer_label">Timer</string>
    <string name="title_activity_timer_full_screen">TimerFullScreenActivity</string>
    <string name="start_timer">start_timer</string>
    <string name="close">close</string>
    <string name="add_alarm">add alarm</string>
    <string name="alarm_card_test_tag">alarm_card_test_tag</string>
    <string name="dialog_ok_test_tag">dialog_ok_test_tag</string>
    <string name="expand_or_collapse">Expand or Collapse</string>
</resources>