...


    /**
     * This constant is to handle the default week day string if none of the week days is selected
     */
    const val WEEK_DAYS_UNSELECTED_DEFAULT_STR = "smtwtfs"
    const val EVERYDAY = "Everyday"
    const val NO_OF_DAYS_IN_A_WEEK = 7

    const val KEY_ALARM_ID = "ALARM_ID"
    const val KEY_SNOOZED_ALARM_ID = "SNOOZED_ALARM_ID"
    const val KEY_ALARM_SCHEDULE_DATE_MILLIS = "ALARM_SCHEDULE_DATE_MILLIS"
    const val KEY_ALARM_SCHEDULE_TIME_MILLIS = "ALARM_SCHEDULE_TIME_MILLIS"
...
