...

    )
}


enum class WeekDay(val label: String,val value:String,val index:Int) {
    SUNDAY(label = "S", value = "Sun", index = 0),
    MONDAY(label = "M", value = "Mon", index = 1),
    TUESDAY(label = "T",  value = "Tue",index = 2),
    WEDNESDAY(label = "W",  value = "Wed",index = 3),
    THURSDAY(label = "T",  value = "Thu",index = 4),
    FRIDAY(label = "F",  value = "Fri",index = 5),
    SATURDAY(label = "S", value = "Sat", index = 6)
...
